<resources>
    <string name="app_name">Pikachise Market</string>
    <string name="nullfranchise">Whoops look like there is no franchise here.. \n\n\n We will add it later :)</string>
    <string name="nullbrochure">No Brochure yet :( \n\n\n You should add it to attract the entrepreneur</string>
    <string name="nullfranchisee">No franchisee yet :( \n\n\n You should add it to attract the entrepreneur</string>
    <string name="nullevent">No Event yet :( \n\n\n You should add it to attract the entrepreneur</string>
    <string name="nullfranchisebrochure">There is no brochure in this franchise :(</string>
    <string name="nullfranchisefranchisee">This franchise has no franchisee :(</string>
    <string name="nullnew">We are sorry, there is no new franchise :(</string>
    <string name="nullhot">We are sorry, there is no Hot franchise :(</string>
    <string name="nullevents">We are sorry, there is no Event :(</string>
    <string name="nullfranchisereviewrating">There is no reviewer yet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro1">Start Dreaming BIG, Make Your Dreams come TRUE.</string>
    <string name="intro3">Information, recommendation, and anything will be so easy with our app</string>
    <string name="intro2">With a franchise, you have someone who cares as much about the business name and image as you do because they own it.</string>
    <string name="intro4">Meet, Negotiate, Build, and Run Your Business NOW</string>
    <string name="next">Next</string>
    <string name="prev">&#8592;</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_not_member"><u>Login As Franchisor</u></string>
    <string name="text_not_franchisor"><u>Login As User</u></string>
    <string name="title_aboutus">PIKACHISE MARKET WILL MAKE YOUR BUSINESS BECOME </string>
    <string name="aboutus">This application is engaged in marketing franchise by providing the best facilities in indonesia. With the various features we provide, will simplify the process of searching and your business processes</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeLoginFranchisor">Keep follow up everything you need to expand your business</string>
    <string name="welcomeLoginMember">You need to login first for access all features of the app</string>
    <string name="hintemail">Email Address</string>
    <string name="hintpassword">Password</string>
    <string name="login"><u>Login</u></string>
    <string name="register">Register</string>
    <string name="createaccount"><u>Create Account</u></string>
    <string name="or"><i>or</i></string>
    <string name="notamember">Not a Franchisor ?</string>
    <string name="singup">Sign Up Now</string>
    <string name="forgotpassword">Forget Password ?</string>
    <string name="hintname">Name</string>
    <string name="hintrepassword">Retype Password</string>
    <string name="terms">I accept "Terms and Conditions"</string>
    <string name="havaccount">Have an account ?</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="register_franchisor"><u>Register As Franchisor</u></string>
    <string name="register_user"><u>Register As User</u></string>
    <string name="success_message">Registration Successful</string>
    <string name="requirements">See the requirements</string>
    <string name="save">Save</string>
    <string name="string_choose_image">choose image</string>
    <string name="whatisthis"><i>What is This ?</i></string>
    <string-array name="categoryspinner">
        <item>Automotive</item>
        <item>Beauty</item>
        <item>Cleaning</item>
        <item>Education</item>
        <item>Food</item>
        <item>Hotel</item>
        <item>Maintenance</item>
        <item>Medic</item>
        <item>Pet Services</item>
        <item>Retail</item>
        <item>Technology</item>
        <item>Travel</item>
    </string-array>
    <string-array name="typespinner">
        <item>Local</item>
        <item>Outsourcing</item>
    </string-array>
</resources>