<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/registeruser.container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="30dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/registeruser.camera"
            android:src="@drawable/addcamera"
            android:layout_width="100sp"
            android:layout_height="100sp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/registeruser.layoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/registeruser.Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:theme="@style/AppTheme.LoginRegister" />
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registeruser.layoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registeruser.Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:theme="@style/AppTheme.LoginRegister" />
            </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/registeruser.layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/registeruser.Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textSize="14sp"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:theme="@style/AppTheme.LoginRegister" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/registeruser.layoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/registeruser.ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textSize="14sp"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:theme="@style/AppTheme.LoginRegister" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/registeruser.layoutaddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registeruser.address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Address"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:theme="@style/AppTheme.LoginRegister" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/registeruser.layoutphonenumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registeruser.phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone Number"
                    android:inputType="phone"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:theme="@style/AppTheme.LoginRegister" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/registeruser.register"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttonloginuser"/>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_gravity="center_vertical"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <TextView
                android:textSize="14sp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"/>
            <View
                android:layout_gravity="center_vertical"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="@color/grey"/>
        </LinearLayout>
        <TextView
            android:id="@+id/registeruser.login"
            android:textColor="@color/black"
            android:text="@string/login"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>
    </LinearLayout>
</ScrollView>